syntax = "proto3";
option java_multiple_files = true;
package com.guohaohome.moviedb.proto;
import "google/protobuf/empty.proto";


message MovieID{
  string id = 1;
}

message AllMovieIDListResponse{
  repeated MovieID reply = 1;
}

message InfoResponse {
  string id = 1;
  string name =2;
  double IMDb = 3;
  int32 Tomatoes = 4;
}

message InfoByIDRequest{
  string id = 1;
}
message InfoRequest{
  string id = 1;
  string name =2;
  double IMDb = 3;
  int32 Tomatoes = 4;
}

message InfoList{
  repeated InfoResponse reply = 1;
}

message ObjectList{
  string ObjectName = 1;
}

message ObjectListRequest{
  string bucketName = 1;
  string keyPrefix = 2;

}

message ObjectListResponse{
  repeated ObjectList reply = 1;
}

message LineList{
  string id=1;
  string sentence=2;
  string author=3;
  string lineID=4;
}

message deleteLineRequest{
  string id=1;
  string lineID=2;
}

message LineListResponse{
  repeated LineList reply = 1;
}

message MusicInfo{
  string id = 1;
  string address = 2;
  string musicName = 3;
  string artist = 4;
}

message MusicListResponse{
  repeated MusicInfo reply = 1;
}

message UsernameRequest{
  string username = 1;
}

message BooleanResponse{
  int32 isTrue = 1;
}

message UserInfo{
  string username = 1;
  string password = 2;
  string fullName = 3;
  string roles = 4;
}

message VerificationRequest{
  string username = 1;
  string password = 2;
}

message TextUploadRequest{
  string objectName = 1;
  string content = 2;
}

message FileUploadRequest{
  string objectPath = 1;
  string type = 2;
  string content = 3;
  string objectName = 4;
}

message FileDeleteRequest{
  string filePath = 1;
}

message MusicUploadRequest{
  string MusicFilePath = 1;
  string musicName = 2;
  string artist  = 3;
  string type = 4;
  string content = 5;
}

message CommentInfo{
  string commentID = 1;
  string username = 2;
  string movieID = 3;
  string content = 4;
}
message CommentListResponse{
  repeated CommentInfo reply = 1;
}
message UserLikeInfo{
  string username = 1;
  string id = 2;
}

message UserLikeListResponse{
  repeated UserLikeInfo reply = 1;
}



service MoviedbService{
  rpc GetAllID (google.protobuf.Empty) returns (AllMovieIDListResponse){}
  rpc GetInfoByID(InfoByIDRequest) returns (InfoResponse) {}
  rpc UpdateByID(InfoRequest) returns (google.protobuf.Empty){}
  rpc InsertMovie(InfoRequest) returns (MovieID){}
  rpc DeleteMovieByID(MovieID) returns(BooleanResponse){}
  rpc GetOssObjectList(ObjectListRequest) returns(ObjectListResponse){}
  rpc GetLines(InfoByIDRequest) returns(LineListResponse){}
  rpc InsertLine(LineList) returns (BooleanResponse){}
  rpc DeleteLine(deleteLineRequest) returns (BooleanResponse){}
  rpc GetMusics(InfoByIDRequest) returns(MusicListResponse){}
  rpc JudgeUsername(UsernameRequest) returns(BooleanResponse){}
  rpc InsertUser(UserInfo) returns (BooleanResponse){}
  rpc GetUserByUserName(UsernameRequest) returns (UserInfo){}
  rpc AuthenticateUser(VerificationRequest) returns(UserInfo){}
  rpc UploadTextToOSS(TextUploadRequest) returns (BooleanResponse){}
  rpc UploadFileToOSS(FileUploadRequest) returns (BooleanResponse){}
  rpc DeleteFileFromOSS(FileDeleteRequest) returns (BooleanResponse){}
  rpc UploadMusicToOSS(MusicUploadRequest) returns (BooleanResponse){}
  rpc GetCommentByMovieID(InfoByIDRequest) returns (CommentListResponse){}
  rpc GetCommentByUserName(InfoByIDRequest) returns (CommentListResponse){}
  rpc InsertComment(CommentInfo) returns (BooleanResponse){}
  rpc DeleteComment(InfoByIDRequest) returns (BooleanResponse){}
  rpc GetUserLikes(UsernameRequest) returns(UserLikeListResponse){}
  rpc InsertUserLike(UserLikeInfo) returns (BooleanResponse){}
  rpc DeleteUserLike(UserLikeInfo) returns (BooleanResponse){}
  rpc GetFavoriteMovieList(UsernameRequest) returns (InfoList){}
}
